# musical_activity_viewer

./: .env.sample  .gitignore  Makefile  README.md  pyproject.toml  supervisord.conf
container/: Dockerfile  docker-compose.yml  docker-entrypoint.sh
reverse_proxy/: apache2.conf  mav.conf
src/: manage.py  requirements.txt  requirements_dev.txt  supervisord.conf
src/mav_djangoq/: apps.py
src/mav_djangoq/filters/: schedule.py
src/mav_djangoq/templates/: list.html
src/mav_djangoq/views/: schedule.py
src/mav_utils/: __init__.py  raise_exception.py
src/musical_activity_viewer/: asgi.py  settings.py  urls.py  wsgi.py
src/musical_activity_viewer/settings/: __init__.py  crispy_forms.py  django.py  django_allauth.py  django_filter.py  django_q2.py  logging.py
src/opendata_tw/: apps.py  config.py  models.py
src/opendata_tw/filters/: activity.py
src/opendata_tw/forms/: activity.py
src/opendata_tw/management/commands/: create_update_schedule.py  update_data.py  update_schema.py
src/opendata_tw/migrations/: 0001_initial.py
src/opendata_tw/serializers/: activity.py
src/opendata_tw/templates/: base.html  delete.html  operation.html  update.html
src/opendata_tw/tests/: test_utils.py
src/opendata_tw/utils/: __init__.py  create_update_schedule.py  handle_m2m_filed.py  update_data.py  update_schema.py
src/opendata_tw/views/: __init__.py  activity.py  updater.py
