[tool.poetry]
name = "musical-activity-viewer"
version = "0.1.0"
description = ""
authors = ["yellowsoar <yellowsoar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
