[tool.poetry]
name = "musical-activity-viewer"
version = "0.1.0"
description = ""
authors = ["yellowsoar <yellowsoar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"
django-q2 = "^1.6.2"
croniter = "^2.0.3"
uvicorn = "^0.29.0"
requests = "^2.31.0"
orjson = "^3.10.0"
django-filter = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
