[tool.poetry]
name = "musical-activity-viewer"
version = "0.1.0"
description = ""
authors = ["yellowsoar <yellowsoar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.1"
django-q2 = "^1.6.2"
croniter = "^2.0.3"
uvicorn = "^0.29.0"
requests = "^2.31.0"
orjson = "^3.10.0"
django-filter = "^24.2"
python-benedict = "^0.33.2"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "musical_activity_viewer.settings"
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]
